# tabularium

./: README.md  README_ru.md
backend/: .gitignore  application.yml  fill_db.sh  pom.xml
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  main.tsx  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src/api/: admin.ts  api.ts  attendance.ts  auth.ts  grades.ts  groupApi.ts  groups.ts  schedule.ts  students.ts  studentsApi.ts  subjects.ts  teachers.ts
frontend/src/components/: AdminPanel.tsx  AttendanceTable.tsx  ClassroomExplorer.tsx  ExportPanel.tsx  GradesTable.tsx  GroupsTable.tsx  QueryBuilder.tsx  ScheduleTable.tsx  StudentsTable.tsx  SubjectsTable.tsx  TeachersTable.tsx
frontend/src/hooks/: useSearchHighlight.ts  useThemeTransition.ts
frontend/src/pages/: AuthPage.tsx
frontend/src/styles/: themeTransition.css
frontend/src/types/: types.ts
server-manager/: application.yml  check_install.sh  emulate_clean.sh  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
server-manager/src/: App.tsx  tauri.ts  types.ts
server-manager/src-tauri/: Cargo.toml  application.yml  tauri.conf.json
server-manager/src-tauri/src/: installer.rs  lib.rs  main.rs
server-manager/src/components/: InstallWizard.tsx  LogConsole.tsx  Sidebar.tsx  StatusBar.tsx
server-manager/src/hooks/: useAppInit.ts  useConfig.ts  (+1 more)
tabularium/frontend/: pnpm-lock.yaml
tabularium/server-manager/: index.html  package.json
(+187 files in other folders)
