[package]
name = "Tabularium"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "frontend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri               = { version = "2.8.5", features = [] }
tauri-plugin-opener = { version = "2.5.0" }
tauri-plugin-dialog = { version = "2.2.0" }
tauri-plugin-fs     = { version = "2.3.0" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
